--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+v7.0.2a - for Kodi Leia 18.1-RC1 Git:2019/02/03 (03/02/2019)
+
+- Modify Skin Settings
+- Update resources folder
+- Home Area Adjustments and total info addons
+- Adjustments some codes in xml
+- Change dependencies service.NextUP for new operation with addon service.upnext
+- Change onback tvguide livetv
+- Change top buttons Movie Video Info for access to script-extended-info windows
+_________________________________________________
+
 v7.0.1a - for Kodi Leia 18.xx Beta.4 (04/01/2019)
 
 - changes xbmc.gui 5.13 to 5.14
