--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v7.0.2a - for Kodi Leia 18.1-RC1 Git:2019/02/03 (03/02/2019)
+v7.0.2a - for Kodi Leia 18.1-RC1 Git:2019/05/03 (05/02/2019)
 
 - Modify Skin Settings
 - Update resources folder
@@ -7,6 +7,8 @@ v7.0.2a - for Kodi Leia 18.1-RC1 Git:2019/02/03 (03/02/2019)
 - Change dependencies service.NextUP for new operation with addon service.upnext
 - Change onback tvguide livetv
 - Change top buttons Movie Video Info for access to script-extended-info windows
+- Correction settings themes
+- Add covers nowplaying home
 _________________________________________________
 
 v7.0.1a - for Kodi Leia 18.xx Beta.4 (04/01/2019)
