--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v7.0.3a - for Kodi Leia 18.2-RC1 Git:20190310 (10/03/2019)
+
+- Change Themes Settings
+- Add Global Multicolor
+_________________________________________________
+
 v7.0.2a - for Kodi Leia 18.1-RC1 Git:20190222 (23/02/2019)
 
 - Modify Skin Settings
