--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v7.0.4a - for Kodi Leia 18.5 Git:20191117 (13/01/2020)
+
+- Restore artist slideshow music visualization
+_________________________________________________
+
 v7.0.3a - for Kodi Leia 18.2-RC1 Git:20190310 (10/03/2019)
 
 - Change Themes Settings
